--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,9 @@
 title: Umut TOKER's Github Blog
 email: umt.toker@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  A blog about some python, flask, android and OrientDB. You can
+  find some useful things to develop yourself with these technologies.
+  
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://umuttoker.com" # the base hostname & protocol for your site
 twitter_username: umuttoker
